package com.projet_warriors.ennemis;

public class Gobelin extends Ennemis{

    public Gobelin() {
        super.nom = "gobelin";
        super.viePoints=6;
        super.forcaAttaque=1;
    }
}
