package com.projet_warriors.ennemis;

public class Sorcier extends Ennemis {

    public Sorcier() {
        super.nom = "sorcier";
        super.viePoints=9;
        super.forcaAttaque=2;
    }
}
