@startuml

title __ENNEMIS's Class Diagram__\n

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Dragon {
          + Dragon()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      abstract class com.projet_warriors.ennemis.Ennemis {
          # forcaAttaque : int
          # nom : String
          # status : Boolean
          # viePoints : int
          + Ennemis()
          + getForcaAttaque()
          + getNom()
          + getStatus()
          + getViePoints()
          + interact()
          + setForcaAttaque()
          + setNom()
          + setStatus()
          + setViePoints()
          + toString()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Gobelin {
          + Gobelin()
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Sorcier {
          + Sorcier()
      }
    }
  }
  

  com.projet_warriors.ennemis.Dragon -up-|> com.projet_warriors.ennemis.Ennemis
  com.projet_warriors.ennemis.Ennemis .up.|> com.projet_warriors.Case
  com.projet_warriors.ennemis.Gobelin -up-|> com.projet_warriors.ennemis.Ennemis
  com.projet_warriors.ennemis.Sorcier -up-|> com.projet_warriors.ennemis.Ennemis


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
